# mesh-simplifier

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: main.cpp  nanite.cpp  nanite.h  tests.cpp
